--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     }
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
