--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
