--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": [
+    "src-client"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
